infra/base/odoo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo
spec:
  selector:
    app: odoo
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: longpoll
      port: 8072
      targetPort: longpoll
